manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizen-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citizen-portal
  template:
    metadata:
      labels:
        app: citizen-portal
    spec:
      containers:
      - name: web
        image: registry.access.redhat.com/ubi9/httpd-24
        ports:
        - containerPort: 8080
