manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citizen-portal
spec:
  selector:
    app: citizen-portal
  ports:
  - port: 8080
    targetPort: 8080
