manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: citizen-portal
spec:
  to:
    kind: Service
    name: citizen-portal
